# Focus

./: .gitignore  .gitmodules  LICENSE  README.md
algorithm/: README.md  run_adaptiv.sh  run_adaptiv_image.sh  run_cmc.sh  run_dse.sh  run_eval.py  run_focus.sh  run_focus_image.sh  run_framefusion.sh  run_original.sh  run_original_image.sh
algorithm/example_output/: accuracy.csv  adaptiv_sparsity.csv  (+5 more)
algorithm/focus/: __init__.py  baseline_CMC.py  baseline_adaptiv.py  interface.py  main.py  pyproject.toml  utils.py
algorithm/focus/configs/: adaptiv.csv  cmc.csv  focus.csv
algorithm/focus/models/llava_onevision/: modeling_llava_onevision.py  modeling_llava_onevision_CMC.py  modeling_llava_onevision_adaptiv.py
algorithm/focus/models/llava_video/: modeling_llava_video.py  modeling_llava_video_CMC.py  modeling_llava_video_adaptiv.py
algorithm/focus/models/minicpmv/: modeling_minicpmv.py  modeling_minicpmv_CMC.py  modeling_minicpmv_adaptiv.py
algorithm/focus/models/qwen2/: modeling_qwen2.py  modeling_qwen2_CMC.py  modeling_qwen2_adaptiv.py
algorithm/focus/models/qwen2_5_vl/: __init__.py  modeling_qwen2_5_vl.py  modeling_qwen2_5_vl_adaptiv.py
rtl/: README.md  adaptiv_array.v  average_update_unit.sv  cmc_addertree_4to1.v  cmc_codec_pe.v  cosine_similarity_unit.sv  fastinvsqrt_fp32.v  fp16_add.v  fp16_exp.v  fp16_mult.v  fp16_recip.v  fp16_to_fp32.v  fp32_add.v  fp32_mult.v  fp32_to_fp16.v  inv_magnitude_unit.v  max_unit_fp16.v  traditional_mac.v  traditional_systolic.v
simulator/: README.md  main.py  run_dse_sim.sh  run_image_sim.sh  run_main_sim.sh
(+68 files in other folders)
